significant update. Add hover for small chart (css and js). Remove spacing between bars on small chart. Adjust/fix labels on axes in all sizes.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,16 @@ svg {
   margin: auto;
   display: block;
 }
+.hover {
+  position: absolute;
+  text-align: center;
+  padding: 0.5em;
+  background: var(--mainColor);
+  color: var(--bkgColor);
+  border: 1px solid var(--bkgColor);
+  border-radius: 10px;
+  font-size: 16px;
+}
 
 .button {
   background-color: var(--accentColor);
